Avoid horizontal scrolling

--- a/webui/css/moderator/grid.css
+++ b/webui/css/moderator/grid.css
@@ -151,7 +151,8 @@ div.contentboxheader
 
 div.contentbox
 {
-    overflow:       auto;
+    overflow-y:     auto;
+    overflow-x:     hidden;
     width:          100%;
     height:         100%;
 }
